highly questionable use of properties, post form should still work

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -684,6 +684,13 @@ hr {
 
 /* IMAGE UPLOAD FORM */
 
+.file-input {
+  display:none;
+}
+
+.newimageform {
+  display: none;
+}
 
 #image-preview {
   width: 260px;
